--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,9 +33,16 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-    implementation 'com.google.mlkit:text-recognition:16.0.1'
+//    implementation 'com.google.mlkit:text-recognition:16.0.1'
 
     implementation 'org.opencv:opencv:4.9.0'
+    implementation 'org.tensorflow:tensorflow-lite:2.12.0'
+    implementation 'org.tensorflow:tensorflow-lite-support:0.4.3'
+
+    implementation 'com.google.mediapipe:tasks-vision:0.10.14'
+    implementation 'com.google.mediapipe:tasks-core:0.10.14'
+
+//    implementation 'com.google.mediapipe:tasks-text:0.10.14'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
