--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace 'com.domain.screenrecorder'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.domain.screenrecorder"
         minSdk 28
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -26,6 +26,12 @@ android {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
+
+
+    dexOptions {
+        preDexLibraries = false
+    }
+
 }
 
 dependencies {
@@ -35,12 +41,13 @@ dependencies {
 
 //    implementation 'com.google.mlkit:text-recognition:16.0.1'
 
-    implementation 'org.opencv:opencv:4.9.0'
+    //implementation 'org.opencv:opencv:4.9.0'
     implementation 'org.tensorflow:tensorflow-lite:2.12.0'
     implementation 'org.tensorflow:tensorflow-lite-support:0.4.3'
 
     implementation 'com.google.mediapipe:tasks-vision:0.10.14'
     implementation 'com.google.mediapipe:tasks-core:0.10.14'
+    implementation project(path: ':sdk')
 
 //    implementation 'com.google.mediapipe:tasks-text:0.10.14'
 
