Dex class files issue fixed. and the app is working with no errors

--- a/settings.gradle
+++ b/settings.gradle
@@ -11,12 +11,10 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         flatDir {
-            dirs("libs")
+            dirs("app/libs")
         }
     }
 }
 rootProject.name = "ScreenRecorder"
 include ':app'
-include ':java'
-include ':sdk'
 include ':sdk'
