--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,6 @@ android {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
-
 }
 
 dependencies {
@@ -37,14 +36,16 @@ dependencies {
 //    implementation 'com.google.mlkit:text-recognition:16.0.1'
 
     //implementation 'org.opencv:opencv:4.9.0'
-    implementation 'org.tensorflow:tensorflow-lite:2.12.0'
-    implementation 'org.tensorflow:tensorflow-lite-support:0.4.3'
 
-    implementation 'com.google.mediapipe:tasks-vision:0.10.14'
-    implementation 'com.google.mediapipe:tasks-core:0.10.14'
+    //implementation 'org.tensorflow:tensorflow-lite:2.12.0'
+    //implementation 'org.tensorflow:tensorflow-lite-support:0.4.3'
+
+    //implementation 'com.google.mediapipe:tasks-vision:0.10.14'
+    //implementation 'com.google.mediapipe:tasks-core:0.10.14'
 //    implementation project(path: ':sdk')
 
     implementation(name: "sdk-release", ext: 'aar')
+
 
 //    implementation 'com.google.mediapipe:tasks-text:0.10.14'
 
